Change getFirst() to get(0)